[tool.poetry]
name = "databricks_starter_kit"
version = "0.1.0"
description = "databricks starter kit for TDF products"
authors = ["Rudyar CORTES <rudyar.cortes@totalenergies.com>"]
readme = "README.md"

[tool.poetry.dependencies]
dynaconf ="^3.2.4"
pydantic = "^2.6.4"
python = "^3.9"
pyyaml = "^6.0.1"

[tool.poetry.dev-dependencies]
coverage = "^7.4.4"
mypy = "^1.9.0"
nox = "^2024.4.15"
pyspark = "^3.5.0"
pytest = "^8.1.1"
pytest-cov = "^3.0.0"
pytest-env = "^1.1.3"
python = "^3.9"
pre-commit = "^3.7.0"
ruff = "0.4.1"
skjold = "^0.6.1"

[tool.coverage.run]
source=["databricks_starter_kit/*"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-s -p no:warnings"
log_cli = 1
log_cli_level = "INFO"
log_cli_format = "[pytest][%(asctime)s][%(levelname)s][%(module)s][%(funcName)s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_level = "INFO"

[tool.pytest_env]
PYSPARK_PYTHON = "python"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
docstring-code-format = true

[tool.skjold]
sources = ["pyup", "gemnasium"]
report_only = false
report_format = 'json'
cache_dir = '.skjold_cache'
cache_expires = 86400
ignore_file = '.skjoldignore'
verbose = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
